# wikipedia-word-frequency-dictionary

./: .dockerignore  .env.example  .gitignore  Dockerfile  Pipfile  README.md  config.py  constants.py  docker-compose.yml  logging_config.py  main.py  pyproject.toml  pytest.ini  schema.py
src/: httpx.py  wiki_client.py
tests/: conftest.py
tests/integration/: test_endpoints.py  test_full_workflow.py
tests/sites/: Győrzámoly – Wikipédia.html  MSCI - Wikipedia.html
tests/unit/: test_filtering.py  test_link_extraction.py  test_wiki_frequency_counter.py  test_word_extraction.py
utils/: filters.py
